--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
+<html lang="en">
+
 <html>
   <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#ffffff">
     <meta charset="utf-8">
-    <title></title>
+
+    <meta name="geo.region" content="US-MI">
+    <meta name="geo.placename" content="East Lansing">
+
+    <meta name="t-shirts" content="summary_large_image">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@coffee_teesco" />
+    <meta name="twitter:title" content="We sell geeky t-shirts" />
+    <meta name="twitter:description" content="View our inventory" />
+    <meta name="twitter:image" content="http://imgur.com/toIc6Wq" />
+
+    <title>Coffee Tees</title>
   </head>
   <body>
-    
+
   </body>
 </html>
