--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta name="geo.region" content="US-MI">
     <meta name="geo.placename" content="East Lansing">
 
-    <meta name="t-shirts" content="summary_large_image">
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="t-shirts" content="summary">
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@coffee_teesco" />
     <meta name="twitter:title" content="We sell geeky t-shirts" />
     <meta name="twitter:description" content="View our inventory" />
