removed meta tshirt added product page

--- a/product.html
+++ b/product.html
@@ -13,17 +13,17 @@
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@coffee_teesco" />
-    <meta name="twitter:title" content="Coffee Tees co." />
-    <meta name="twitter:description" content="We sell geeky t-shirts" />
+    <meta name="twitter:title" content="Coffee Tees Co Products" />
+    <meta name="twitter:description" content="Check out our inventory" />
     <meta name="twitter:image" content="http://i.imgur.com/toIc6Wq.jpg" />
 
-    <meta property="og:title" content="Coffee Tees " />
+    <meta property="og:title" content="Coffee Tees Products" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://walke559-kapv98gmwdanx_f2dok.surge.sh/" />
     <meta property="og:image" content="http://i.imgur.com/toIc6Wq.jpg" />
-    <meta property="og:description" content="We sell geeky t-shirts">
+    <meta property="og:description" content="Check out our inventory">
 
-    <title>Coffee Tees</title>
+    <title>Coffee Tees Products</title>
     <meta name="description" content="We sell geeky t-shirts">
   </head>
   <body>
