added links between pages

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     <meta name="description" content="We sell geeky t-shirts">
   </head>
   <body>
-
+    <a link href="product.html">Products</a>
   </body>
 </html>
