--- a/product.html
+++ b/product.html
@@ -25,6 +25,6 @@
     <meta name="description" content="We sell geeky t-shirts">
   </head>
   <body>
-
+  <a link href="index.html">Home</a>
   </body>
 </html>
