--- a/product.html
+++ b/product.html
@@ -17,14 +17,14 @@
 
     <meta property="og:title" content="Coffee Tees Products" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://walke559-kapv98gmwdanx_f2dok.surge.sh/" />
+    <meta property="og:url" content="https://walke559-kapv98gmwdanx_f2dok.surge.sh/product.html" />
     <meta property="og:image" content="http://i.imgur.com/toIc6Wq.jpg" />
     <meta property="og:description" content="Check out our inventory">
 
     <title>Coffee Tees Products</title>
-    <meta name="description" content="We sell geeky t-shirts">
+    <meta name="description" content="Check out our inventory">
   </head>
   <body>
-  <a link href="index.html">Home</a>
+    <a href="index.html">Home</a>
   </body>
 </html>
